--- a/src/app/form/form.component.css
+++ b/src/app/form/form.component.css
@@ -2,6 +2,7 @@ form, input, select, textarea {
     margin: 0;
     padding: 0;
     color: white;
+    background-color: #3d3939;
 }
 
 div.my-form form {
